--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     .hero-image {
       position: absolute;
       inset: 0;
-      background: url('./images/toppage-tealine.jpg') center/cover;
+      background: url('./toppage-tealine.jpg') center/cover;
     }
 
     .hero-overlay {
@@ -956,7 +956,7 @@
 <!-- NAVIGATION -->
 <nav id="navbar">
   <a class="nav-logo" href="#">
-    <img src="./images/cropped-shizen_registered-e1694589341814.png" alt="ShiZen Tea">
+    <img src="./cropped-shizen_registered-e1694589341814.png" alt="ShiZen Tea">
   </a>
   <ul class="nav-links" id="navLinks">
     <li><a href="#experience">Experience</a></li>
@@ -988,7 +988,7 @@
 <section class="intro" id="experience">
   <div class="container">
     <div class="intro-image fade-in">
-      <img src="./images/12typesoftea-1.jpg" alt="12 types of Japanese tea">
+      <img src="./12typesoftea-1.jpg" alt="12 types of Japanese tea">
     </div>
     <div class="intro-text fade-in">
       <p class="section-label">The Experience</p>
@@ -1054,7 +1054,7 @@
     <div class="tea-grid">
       <div class="tea-card fade-in">
         <div class="tea-card-image">
-          <img src="./images/sencha-pic-shizen2.jpg" alt="Sencha green tea">
+          <img src="./sencha-pic-shizen2.jpg" alt="Sencha green tea">
         </div>
         <p class="tea-card-number">— 01</p>
         <h3>Sencha Green Tea</h3>
@@ -1063,7 +1063,7 @@
       </div>
       <div class="tea-card fade-in">
         <div class="tea-card-image">
-          <img src="./images/matcha-pic-shizentea2.jpg" alt="Matcha green tea">
+          <img src="./matcha-pic-shizentea2.jpg" alt="Matcha green tea">
         </div>
         <p class="tea-card-number">— 02</p>
         <h3>Matcha</h3>
@@ -1072,7 +1072,7 @@
       </div>
       <div class="tea-card fade-in">
         <div class="tea-card-image">
-          <img src="./images/gyokuro-pic-shizen1.jpg" alt="Gyokuro green tea">
+          <img src="./gyokuro-pic-shizen1.jpg" alt="Gyokuro green tea">
         </div>
         <p class="tea-card-number">— 03</p>
         <h3>Gyokuro</h3>
@@ -1090,19 +1090,19 @@
     <h2 class="section-title">Moments from <em>Our Sessions</em></h2>
   </div>
   <div class="gallery-scroll">
-    <div class="gallery-item landscape"><img src="./images/toppic1.jpg" alt="Tea session"></div>
-    <div class="gallery-item portrait"><img src="./images/img_6349-1.jpg" alt="Tea preparation"></div>
-    <div class="gallery-item landscape"><img src="./images/img_7022.jpg" alt="Tea experience"></div>
-    <div class="gallery-item landscape"><img src="./images/tokyo_tea_session.jpg" alt="Tea session"></div>
-    <div class="gallery-item portrait"><img src="./images/tokyo_tea_session-3.jpg" alt="Tea session"></div>
-    <div class="gallery-item landscape"><img src="./images/tokyo_tea_session-1.jpg" alt="Tea tasting"></div>
-    <div class="gallery-item landscape"><img src="./images/tokyo_tea_session-2.jpg" alt="Tea brewing"></div>
-    <div class="gallery-item portrait"><img src="./images/tokyo_tea_session-7.jpg" alt="Tea session"></div>
-    <div class="gallery-item landscape"><img src="./images/matcha2.jpg" alt="Matcha preparation"></div>
-    <div class="gallery-item landscape"><img src="./images/tokyo_tea_session-4.jpg" alt="Tea session"></div>
-    <div class="gallery-item portrait"><img src="./images/matcha.jpg" alt="Matcha"></div>
-    <div class="gallery-item landscape"><img src="./images/tokyo_tea_session-5.jpg" alt="Tea session"></div>
-    <div class="gallery-item landscape"><img src="./images/tokyo_tea_session-6.jpg" alt="Tea session"></div>
+    <div class="gallery-item landscape"><img src="./toppic1.jpg" alt="Tea session"></div>
+    <div class="gallery-item portrait"><img src="./img_6349-1.jpg" alt="Tea preparation"></div>
+    <div class="gallery-item landscape"><img src="./img_7022.jpg" alt="Tea experience"></div>
+    <div class="gallery-item landscape"><img src="./tokyo_tea_session.jpg" alt="Tea session"></div>
+    <div class="gallery-item portrait"><img src="./tokyo_tea_session-3.jpg" alt="Tea session"></div>
+    <div class="gallery-item landscape"><img src="./tokyo_tea_session-1.jpg" alt="Tea tasting"></div>
+    <div class="gallery-item landscape"><img src="./tokyo_tea_session-2.jpg" alt="Tea brewing"></div>
+    <div class="gallery-item portrait"><img src="./tokyo_tea_session-7.jpg" alt="Tea session"></div>
+    <div class="gallery-item landscape"><img src="./matcha2.jpg" alt="Matcha preparation"></div>
+    <div class="gallery-item landscape"><img src="./tokyo_tea_session-4.jpg" alt="Tea session"></div>
+    <div class="gallery-item portrait"><img src="./matcha.jpg" alt="Matcha"></div>
+    <div class="gallery-item landscape"><img src="./tokyo_tea_session-5.jpg" alt="Tea session"></div>
+    <div class="gallery-item landscape"><img src="./tokyo_tea_session-6.jpg" alt="Tea session"></div>
   </div>
 </section>
 
@@ -1138,8 +1138,8 @@
 <section class="location" id="location">
   <div class="container">
     <div class="location-images fade-in">
-      <img src="./images/downtowntokyo.jpg" alt="Downtown Tokyo apartment">
-      <img src="./images/hostmakingtea.jpg" alt="Host making tea">
+      <img src="./downtowntokyo.jpg" alt="Downtown Tokyo apartment">
+      <img src="./hostmakingtea.jpg" alt="Host making tea">
     </div>
     <div class="location-text fade-in">
       <p class="section-label">Location</p>
@@ -1167,8 +1167,8 @@
       <p>Over the past decade, I've dedicated myself to the study of Japanese tea, embarking on countless journeys to tea farms and factories across Japan. This pursuit culminated in my certification as a Japanese Tea Adviser.</p>
     </div>
     <div class="host-images fade-in">
-      <img src="./images/img_9070-edited.jpg" alt="Host profile">
-      <img src="./images/hostmakingtea2-edited-1.jpg" alt="Host making tea">
+      <img src="./img_9070-edited.jpg" alt="Host profile">
+      <img src="./hostmakingtea2-edited-1.jpg" alt="Host making tea">
     </div>
   </div>
 </section>
