--- a/index.html
+++ b/index.html
@@ -1189,42 +1189,55 @@
     <p class="section-label">Get in Touch</p>
     <h2 class="section-title">Questions?</h2>
     <p style="color: var(--color-text-light); line-height: 1.9;">If you have any questions about the experience, please don't hesitate to reach out.</p>
-    <form class="contact-form" action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
+    <form class="contact-form" id="reservationForm" novalidate>
       <div class="form-row">
         <div class="form-group">
           <label>Name *</label>
-          <input type="text" name="name" required>
+          <input type="text" name="entry.551945977" required placeholder="Your full name">
         </div>
         <div class="form-group">
           <label>Email *</label>
-          <input type="email" name="email" required>
+          <input type="email" name="entry.149408928" required placeholder="your@email.com">
         </div>
       </div>
       <div class="form-row">
         <div class="form-group">
-          <label>Preferred Date</label>
-          <input type="date" name="date">
+          <label>Date *</label>
+          <input type="date" id="gf-date" required>
         </div>
         <div class="form-group">
-          <label>Party Size</label>
-          <select name="party_size">
-            <option value="">Select</option>
-            <option>1 person</option>
-            <option>2 people</option>
-            <option>3 people</option>
-            <option>4 people</option>
-            <option>5 people</option>
-            <option>Larger party</option>
-          </select>
+          <label>Time *</label>
+          <input type="time" id="gf-time" required>
         </div>
       </div>
-      <div class="form-group">
-        <label>Message</label>
-        <textarea name="message" placeholder="Any special requests or questions..."></textarea>
+      <div class="form-row">
+        <div class="form-group">
+          <label>Party Size *</label>
+          <select name="entry.1167061600" required>
+            <option value="">Select</option>
+            <option value="1 person">1 person</option>
+            <option value="2 people">2 people</option>
+            <option value="3 people">3 people</option>
+            <option value="4 people">4 people</option>
+            <option value="5 people">5 people</option>
+            <option value="Larger party">Larger party</option>
+          </select>
+        </div>
+        <div class="form-group">
+          <label>Special Requests</label>
+          <textarea name="entry.222885082" placeholder="Any special requests or questions..."></textarea>
+        </div>
       </div>
+      <!-- Hidden fields for Google Forms date/time format -->
+      <input type="hidden" name="entry.657555151_year" id="gf-year">
+      <input type="hidden" name="entry.657555151_month" id="gf-month">
+      <input type="hidden" name="entry.657555151_day" id="gf-day">
+      <input type="hidden" name="entry.547734216_hour" id="gf-hour">
+      <input type="hidden" name="entry.547734216_minute" id="gf-minute">
       <div class="form-submit">
-        <button type="submit">Send Message</button>
+        <button type="submit" id="submitBtn">Send Message</button>
       </div>
+      <p id="formMessage" style="text-align:center; margin-top:20px; display:none;"></p>
     </form>
   </div>
 </section>
@@ -1288,6 +1301,64 @@ document.querySelectorAll('a[href^="#"]').forEach(anchor => {
       target.scrollIntoView({ behavior: 'smooth', block: 'start' });
       document.getElementById('navLinks').classList.remove('open');
     }
+  });
+});
+// Google Forms submission handler
+document.getElementById('reservationForm').addEventListener('submit', function(e) {
+  e.preventDefault();
+  
+  const form = this;
+  const btn = document.getElementById('submitBtn');
+  const msg = document.getElementById('formMessage');
+  
+  // Split date into year/month/day for Google Forms
+  const dateVal = document.getElementById('gf-date').value;
+  if (dateVal) {
+    const [y, m, d] = dateVal.split('-');
+    document.getElementById('gf-year').value = y;
+    document.getElementById('gf-month').value = parseInt(m);
+    document.getElementById('gf-day').value = parseInt(d);
+  }
+  
+  // Split time into hour/minute for Google Forms
+  const timeVal = document.getElementById('gf-time').value;
+  if (timeVal) {
+    const [h, min] = timeVal.split(':');
+    document.getElementById('gf-hour').value = parseInt(h);
+    document.getElementById('gf-minute').value = parseInt(min);
+  }
+  
+  // Basic validation
+  if (!dateVal || !timeVal) {
+    msg.style.display = 'block';
+    msg.style.color = '#c0392b';
+    msg.textContent = 'Please fill in all required fields.';
+    return;
+  }
+  
+  btn.textContent = 'Sending...';
+  btn.disabled = true;
+  
+  const formData = new FormData(form);
+  const url = 'https://docs.google.com/forms/u/0/d/e/1FAIpQLSemAu4UcYT7jlhu2VGiwY6Dv77vOMsPNx2l9qHvG7TUXHUAUA/formResponse';
+  
+  fetch(url, {
+    method: 'POST',
+    body: formData,
+    mode: 'no-cors'
+  }).then(() => {
+    msg.style.display = 'block';
+    msg.style.color = 'var(--color-accent)';
+    msg.textContent = 'Thank you! Your message has been sent. We will get back to you via email.';
+    form.reset();
+    btn.textContent = 'Send Message';
+    btn.disabled = false;
+  }).catch(() => {
+    msg.style.display = 'block';
+    msg.style.color = '#c0392b';
+    msg.textContent = 'Something went wrong. Please try again or contact us directly.';
+    btn.textContent = 'Send Message';
+    btn.disabled = false;
   });
 });
 </script>
